# triton-inference-server

./: .flake8  LICENSE  Makefile  README.md  docker-compose.gpu.yaml  docker-compose.yaml  env.example  pyproject.toml
.github/workflows/: triton_inference.yml
Dockerfiles/triton/: Dockerfile
triton_server/: __main__.py
triton_server/base_model_service/: base_model.py
triton_server/base_model_service/model_loader/: base_model_loader.py  model_loader.py
triton_server/core/: logger.py  settings.py
triton_server/efficientnet_service/: efficientnet.py
